Basic graph integrated

--- a/tworoads/this_or_that/templates/this_or_that/index.html
+++ b/tworoads/this_or_that/templates/this_or_that/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="{{STATIC_URL}}polls/build/react.js"></script>
-    <script src="{{STATIC_URL}}polls/build/JSXTransformer.js"></script>
+    <script src="{{STATIC_URL}}this_or_that/build/react.js"></script>
+    <script src="{{STATIC_URL}}this_or_that/build/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.3.13/d3.js"></script>
   </head>
   <body>
     <div id="content"></div>
