--- a/tworoads/this_or_that/templates/this_or_that/index.html
+++ b/tworoads/this_or_that/templates/this_or_that/index.html
@@ -12,7 +12,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel=stylesheet href="{{STATIC_URL}}this_or_that/src/loginStyle.css" type="text/css" />
+	<link rel="stylesheet" href="{{STATIC_URL}}this_or_that/src/loginStyle.css" type="text/css" />
   </head>
   <body>
     <div id="content"></div>
